Project3/analysis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Tea\Downloads\kompose-windows-amd64.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: analysis
  name: analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: analysis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Tea\Downloads\kompose-windows-amd64.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/sensordata: "true"
        io.kompose.service: analysis
    spec:
      containers:
        - image: analysis:latest
          imagePullPolicy: IfNotPresent
          name: analysis
          ports:
            - containerPort: 5002
          resources: {}
      restartPolicy: Always
status: {}
