Project3/kafka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Tea\Downloads\kompose-windows-amd64.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-server
  name: kafka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Tea\Downloads\kompose-windows-amd64.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/sensordata: "true"
        io.kompose.service: kafka-server
    spec:
      containers:
        - env:
            - name: ALLOW_PLAINTEXT_LISTENER
              value: "yes"
            - name: KAFKA_CFG_ADVERTISED_LISTENERS
              value: PLAINTEXT://kafka-server:9092,PLAINTEXT_HOST://localhost:50023
            - name: KAFKA_CFG_LISTENERS
              value: PLAINTEXT://:9092,PLAINTEXT_HOST://:50023
            - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
              value: PLAINTEXT_HOST:PLAINTEXT,PLAINTEXT:PLAINTEXT
            - name: KAFKA_CFG_ZOOKEEPER_CONNECT
              value: zookeeper-server:2181
            - name: KAFKA_INTER_BROKER_LISTENER_NAME
              value: PLAINTEXT
          image: bitnami/kafka:2.5.0
          name: kafka-server
          ports:
            - containerPort: 9092
            - containerPort: 50023
          resources: {}
      restartPolicy: Always
status: {}
