Project3/analysis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\Tea\Downloads\kompose-windows-amd64.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: analysis
  name: analysis
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 5002
  selector:
    io.kompose.service: analysis
status:
  loadBalancer: {}
