Project3/kafka-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\Tea\Downloads\kompose-windows-amd64.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-server
  name: kafka-server
spec:
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
    - name: "50023"
      port: 50023
      targetPort: 50023
  selector:
    io.kompose.service: kafka-server
status:
  loadBalancer: {}
